@@ -1,3 +1,6 @@
+2004-06-15 Magnus Hagdorn
+ * install to GLIMMER_PREFIX
+
 2004-06-10 Magnus Hagdorn
  * added f90_proj4.tar.gz target
 
